landing final menu responsive

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="navbardos flex jbetween">
+        <div class="navbardos flex jbetween">
                 <a href="">                   
                         <img src="img/logopixar.png" alt="">
                 </a>
@@ -78,17 +78,14 @@
                 </div>                   
             </div>
             <div class="lateral">
-                <ul>
+                <ul class="primero activo">
                     <li>Feature Films >></li>
-                    <li>Short Films >></li>
+                    <li data-menu="short">Short Films >></li>
                     <li>Technology >></li>
                     <li>Careers >></li>
                     <li>Extras >></li>
                 </ul>
-            </div>
-            <div class="lateraldos">
-                <div class="short">
-                    <ul class="submenudos">
+                    <ul id="short" class="segundo">
                         <div class="atras">
                             <span>Back</span>
                         </div>
@@ -99,11 +96,9 @@
                         <li><a href="#">TOYSTORY TOONS</a></li>
                         <li><a href="#">HOME ENTERTAINMENT</a></li>
                     </ul>
-                </div>
-            </div>
-                
-            </div>   
-            </nav>
+            </div>               
+        </div>   
+        </nav>
             
         </header>
         <div class="fondo">
